--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,18 +1,105 @@
 .home {
-	padding: 10px 20px;
+	padding: 15px 25px;
 	min-height: 100%;
 	width: 100%;
+	max-width: 700px;
+	margin: 50px auto;
+	background: #fff;
+	color: #1D115B;
+	border-radius: 7px;
+	box-shadow: inset 0 0px 0 1px #fff, 25px 0 20px rgba(0,0,0,0.1);
 }
 
-.block {
-	background: #f5f5f5;
-	padding: 10px 30px;
-	border: 1px solid #eee;
+.title {
+	color: #fff;
+	font-size: 74px;
+   	text-align: center;
+	padding: 0;
+	margin: 0;
+	/* padding: 10px 0 30px; */
+	text-shadow: 1px 0 1px rgba(0,0,0,0.3);
+}
+
+.peoplelist {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.person {
+	display: flex;
+	align-items: center;
+	background: #1D115B;
+	color: #F9ECDC;
+	border-radius: 6px;
+	padding: 5px 15px;
+	margin: 0 15px 10px 0;
+	font-weight: bold;
+}
+
+.person a {
+	color: inherit;
+	padding-left: 8px;
+	line-height: 1;
+	text-decoration: none;
+	font-size: 22px;
+	transition: all 0.2s;
+}
+
+.person a:hover {
+	transform: scale(1.1);
+	transform-origin: center center;
+}
+
+.persontoggle {
+	cursor: pointer;
+	transition: 0.2s;
+}
+
+.persondisabled {
+	color: #1D115B;
+	background: transparent;
+	box-shadow: inset 0 0 0 2px #1D115B;
+}
+
+
+.subtitle {
+	color: #fff;
+	font-size: 30px;
+   	text-align: center;
+	padding: 0;
+	margin: 0;
+	text-transform: uppercase;
+	/* text-shadow: 1px 0 1px rgba(0,0,0,0.3); */
+}
+
+.headertext {
+	padding: 60px 0;
+}
+
+.personform {
+	display: flex;
+	align-items: center;
 	margin-bottom: 20px;
 }
 
+.personinput {
+	flex: 1;
+}
+
+.block {
+	padding: 10px 30px;
+	margin-bottom: 20px;
+}
+
+.block + .block{
+	margin-top: 40px;
+	border-top: 1px dashed #ccc;
+	padding-top: 40px;
+}
+
 .newbill {
-	width: 300px;
+	/* width: 300px; */
+	width: 100%;
 	display: flex;
 	margin-right: 20px;
 }
@@ -21,11 +108,67 @@
 	width: 100%;
 }
 
+.billline {
+	display: flex;
+	width: 100%;
+	align-items: center;
+	margin: 20px 0;
+	/* align-content: space-between; */
+	justify-content: space-between;
+	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
+	padding: 5px 20px;
+	border-radius: 10px;
+}
+
+.billsplit {
+	flex: 1;
+	display: flex;
+	text-transform: uppercase;
+	color: #766A95;
+}
+
+.billsplit > span{
+	padding-right: 5px;
+	vertical-align: center;
+}
+
+.billsplit i {
+	padding-right: 3px;
+}
+
+.flex {
+	display: flex;
+}
+
+.billmain {
+	/* border-right: 2px solid #766A95; */
+	padding-top: 10px;
+	padding-bottom: 10px;
+	/* padding-right: 30px; */
+	margin-right: 30px;
+	width: 150px;
+	/* display: flex; */
+	/* align-items: center; */
+}
+
+.billamount {
+	font-size: 32px;
+	font-weight: bold;
+	padding-right: 7px;
+}
+
+.billperson {
+	/* padding-left: 7px; */
+	/* color: #766A95; */
+	/* font-weight: bold; */
+	/* font-size: 24px; */
+}
+
 .billInner {
-	padding: 20px;
+	width: 100%;
 	display: flex;
 	flex-direction: column;
-	background-color: #fff;
+	/* background-color: #fff; */
 }
 
 .billInner > * + * {
@@ -35,13 +178,13 @@
 .bill {
 	display: flex;
 	margin-right: 20px;
-	width: 150px;
+	/* width: 100%; */
 }
 
 .bills {
-	display: flex;
-	flex-wrap: wrap;
-	align-items: flex-start;
+/* 	display: flex; */
+/* 	flex-wrap: wrap; */
+/* 	align-items: flex-start; */
 }
 
 .input {
