--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,14 +1,18 @@
 html, body {
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 	padding: 0;
 	margin: 0;
-	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
+	font-family: Lato, 'Helvetica Neue', arial, sans-serif;
 	font-weight: 400;
 	color: #444;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+html {
+	background: #050505;
+	background: linear-gradient(127deg, #766A95, #1D115B);
 }
 
 * {
