--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,11 +1,11 @@
-.home {
-	padding: 15px 25px;
-	min-height: 100%;
-	width: 100%;
+.homewrapper {
 	max-width: 700px;
 	margin: 50px auto;
+}
+
+.home {
 	background: #fff;
-	color: #1D115B;
+	color: #11515b;
 	border-radius: 7px;
 	box-shadow: inset 0 0px 0 1px #fff, 25px 0 20px rgba(0,0,0,0.1);
 }
@@ -28,12 +28,14 @@
 .person {
 	display: flex;
 	align-items: center;
-	background: #1D115B;
+	background: #11515b;
 	color: #F9ECDC;
 	border-radius: 6px;
-	padding: 5px 15px;
+	padding: 11px 15px;
 	margin: 0 15px 10px 0;
 	font-weight: bold;
+	/* height: 46px; */
+	font-size: 18px;
 }
 
 .person a {
@@ -52,13 +54,42 @@
 
 .persontoggle {
 	cursor: pointer;
-	transition: 0.2s;
+	padding: 2px 7px;
+	border-radius: 7px;
+}
+
+.persontoggle:hover {
+	background: #11515b30;
 }
 
 .persondisabled {
-	color: #1D115B;
-	background: transparent;
-	box-shadow: inset 0 0 0 2px #1D115B;
+	color: #11515b50;
+}
+
+.persontogglebtn {
+	background: #11515b;
+	border: 2px solid #11515b;
+	color: #fff;
+	border-radius: 5px;
+	font-size: 18px;
+	padding: 10px 18px;
+	font-weight: bold;
+	transition: 0.2s;
+	white-space: nowrap;
+	cursor: pointer;
+	margin-right: 10px;
+}
+
+.persondisabledbtn {
+	background: #fff;
+	border: 2px solid #11515b;
+	color: #11515b;
+}
+
+.persondisabledbtninactive {
+	background: #fff;
+	border: 2px solid #11515b5a;
+	color: #11515b;
 }
 
 
@@ -82,30 +113,40 @@
 	margin-bottom: 20px;
 }
 
-.personinput {
-	flex: 1;
+.block {
+	background: linear-gradient(#fff, #f9f9f9);
+	padding: 10px 30px;
+	box-shadow: inset 0 -15px 25px -25px rgba(0,0,0,0.2);
+	padding-bottom: 40px;
 }
 
-.block {
-	padding: 10px 30px;
-	margin-bottom: 20px;
+.block:first-child {
+	border-radius: 7px 7px 0 0;
+}
+
+.block:last-child {
+	border-radius: 0 0 7px 7px;
+}
+
+.blockhigh {
+	/* background: linear-gradient(127deg, #83956a5a, #11515b5a); */
 }
 
 .block + .block{
-	margin-top: 40px;
-	border-top: 1px dashed #ccc;
 	padding-top: 40px;
+	border-top: 1px solid rgba(0,0,0,0.05);
 }
+
+/* .block:nth-child(2n) { */
+/* 	background: #f9f9f9; */
+/* } */
 
 .newbill {
-	/* width: 300px; */
-	width: 100%;
-	display: flex;
-	margin-right: 20px;
-}
-
-.bill select, .bill input {
-	width: 100%;
+	/* display: flex; */
+	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
+	padding: 25px 20px 15px;
+	border-radius: 10px;
+	background: #fff;
 }
 
 .billline {
@@ -113,7 +154,6 @@
 	width: 100%;
 	align-items: center;
 	margin: 20px 0;
-	/* align-content: space-between; */
 	justify-content: space-between;
 	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
 	padding: 5px 20px;
@@ -124,7 +164,7 @@
 	flex: 1;
 	display: flex;
 	text-transform: uppercase;
-	color: #766A95;
+	color: #11515b;
 }
 
 .billsplit > span{
@@ -138,17 +178,16 @@
 
 .flex {
 	display: flex;
+	width: 100%;
+	align-items: center;
+	justify-content: space-between;
 }
 
 .billmain {
-	/* border-right: 2px solid #766A95; */
 	padding-top: 10px;
 	padding-bottom: 10px;
-	/* padding-right: 30px; */
 	margin-right: 30px;
-	width: 150px;
-	/* display: flex; */
-	/* align-items: center; */
+	min-width: 60px;
 }
 
 .billamount {
@@ -158,37 +197,12 @@
 }
 
 .billperson {
-	/* padding-left: 7px; */
-	/* color: #766A95; */
-	/* font-weight: bold; */
-	/* font-size: 24px; */
-}
-
-.billInner {
-	width: 100%;
-	display: flex;
-	flex-direction: column;
-	/* background-color: #fff; */
-}
-
-.billInner > * + * {
-	margin-top: 10px;
 }
 
 .bill {
 	display: flex;
 	margin-right: 20px;
 	/* width: 100%; */
-}
-
-.bills {
-/* 	display: flex; */
-/* 	flex-wrap: wrap; */
-/* 	align-items: flex-start; */
-}
-
-.input {
-	/* background: #fff; */
 }
 
 .list {
@@ -201,20 +215,108 @@
 }
 
 .listitem {
+	font-size: 18px;
+	margin-right: 10px;
 	display: flex;
-	justify-content: space-between !important;
+}
+
+.listitem a {
+	margin-left: 5px;
 }
 
 .newgroup {
 	width: 200px;
 	background-color: #fff;
+	display: flex;
+	margin-bottom: 20px;
 }
 
-.newgroupinner {
-	padding: 20px;
+.grouplist {
+	display: flex;
+	margin-top: 20px;
 }
 
-/* .select { */
-/* 	min-width: 200px; */
+.ownings {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+.owning {
+	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
+	padding: 10px 20px;
+	border-radius: 10px;
+	margin-bottom: 20px;
+	width: 46%;
+	margin-bottom: 30px;
+	background-color: #ffffff;
+}
+
+.owningamount {
+	font-size: 34px;
+	padding-right: 30px;
+	min-width: 70px;
+	text-align: center;
+	margin-top: 10px;
+	padding-top: 10px;
+	border-top: 2px solid #766a951a;
+}
+
+.owningdetail {
+	display: flex;
+	align-items: center;
+	white-space: nowrap;
+}
+
+@keyframes slide_in {
+  0% { opacity: 0; margin-left: 0; }
+  60% { margin-left: calc(95% - 30px); opacity: 1;}
+  100%   { opacity: 0;  margin-left: calc(100% - 30px); }
+}
+
+.owningarrowwrap {
+	flex:1;
+   	color: #11515b;
+	text-align: center;
+   	/* padding: 0 10px; */
+}
+
+/* .owningarrow { */
+/* 	animation-name: slide_in; */
+/* 	animation-duration: 1.5s; */
+/* 	/1* animation-direction: alternate; *1/ */
+/* 	animation-iteration-count: infinite; */
+/* 	animation-timing-function: linear; */
 /* } */
 
+
+.button {
+  background: #fff;
+  border: 2px solid #11515b;
+  color: #11515b;
+  border-radius: 5px;
+  font-size: 18px;
+  padding: 10px 18px;
+  font-weight: bold;
+  transition: 0.2s;
+  white-space: nowrap;
+}
+
+.button:hover {
+  cursor: pointer;
+  background: #11515b1a;
+}
+
+.input {
+  background: #fff;
+  border: none;
+  border-bottom: 2px solid #11515b;
+  width: 100%;
+  padding: 10px 8px;
+  font-size: 18px;
+  color: #11515b;
+  font-weight: bold;
+}
+
+.blockinvert {
+  color: #11515b;
+}
