--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -1,6 +1,6 @@
 .homewrapper {
 	max-width: 700px;
-	margin: 50px auto;
+	margin: 0 auto 50px;
 }
 
 .home {
@@ -104,7 +104,7 @@
 }
 
 .headertext {
-	padding: 60px 0;
+	padding: 140px 0;
 }
 
 .personform {
