--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,7 +12,7 @@ html, body {
 
 html {
 	background: #050505;
-	background: linear-gradient(127deg, #83956a, #11515b);
+	background: linear-gradient(-23deg, #70ae16, #11515b 30%);
 	background-attachment: fixed;
 }
 
