--- a/src/routes/home/style.css
+++ b/src/routes/home/style.css
@@ -4,10 +4,7 @@
 }
 
 .home {
-	background: #fff;
 	color: #11515b;
-	border-radius: 7px;
-	box-shadow: inset 0 0px 0 1px #fff, 25px 0 20px rgba(0,0,0,0.1);
 }
 
 .title {
@@ -16,7 +13,6 @@
    	text-align: center;
 	padding: 0;
 	margin: 0;
-	/* padding: 10px 0 30px; */
 	text-shadow: 1px 0 1px rgba(0,0,0,0.3);
 }
 
@@ -34,7 +30,6 @@
 	padding: 11px 15px;
 	margin: 0 15px 10px 0;
 	font-weight: bold;
-	/* height: 46px; */
 	font-size: 18px;
 }
 
@@ -100,7 +95,6 @@
 	padding: 0;
 	margin: 0;
 	text-transform: uppercase;
-	/* text-shadow: 1px 0 1px rgba(0,0,0,0.3); */
 }
 
 .headertext {
@@ -115,9 +109,14 @@
 
 .block {
 	background: linear-gradient(#fff, #f9f9f9);
-	padding: 10px 30px;
+	padding: 30px 30px;
 	box-shadow: inset 0 -15px 25px -25px rgba(0,0,0,0.2);
 	padding-bottom: 40px;
+	margin-top: 0.5em;
+}
+
+.blocktitle {
+	margin-top: 0;
 }
 
 .block:first-child {
@@ -128,25 +127,8 @@
 	border-radius: 0 0 7px 7px;
 }
 
-.blockhigh {
-	/* background: linear-gradient(127deg, #83956a5a, #11515b5a); */
-}
-
 .block + .block{
-	padding-top: 40px;
 	border-top: 1px solid rgba(0,0,0,0.05);
-}
-
-/* .block:nth-child(2n) { */
-/* 	background: #f9f9f9; */
-/* } */
-
-.newbill {
-	/* display: flex; */
-	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
-	padding: 25px 20px 15px;
-	border-radius: 10px;
-	background: #fff;
 }
 
 .billline {
@@ -155,9 +137,9 @@
 	align-items: center;
 	margin: 20px 0;
 	justify-content: space-between;
-	box-shadow: 0 6px 15px rgba(0,0,0,0.05), 0 1px 2px rgba(0,0,0,0.15);
+	box-shadow: 0 1px 1px 1px rgba(17, 81, 91, 0.3);
 	padding: 5px 20px;
-	border-radius: 10px;
+	border-radius: 5px;
 }
 
 .billsplit {
@@ -202,7 +184,6 @@
 .bill {
 	display: flex;
 	margin-right: 20px;
-	/* width: 100%; */
 }
 
 .list {
@@ -228,7 +209,6 @@
 	width: 200px;
 	background-color: #fff;
 	display: flex;
-	margin-bottom: 20px;
 }
 
 .grouplist {
@@ -277,17 +257,7 @@
 	flex:1;
    	color: #11515b;
 	text-align: center;
-   	/* padding: 0 10px; */
 }
-
-/* .owningarrow { */
-/* 	animation-name: slide_in; */
-/* 	animation-duration: 1.5s; */
-/* 	/1* animation-direction: alternate; *1/ */
-/* 	animation-iteration-count: infinite; */
-/* 	animation-timing-function: linear; */
-/* } */
-
 
 .button {
   background: #fff;
